
	wimlib no longer depends on iconv.

	Reduced memory usage slightly.

	When a WIM image is applied in NTFS-3G mode, security descriptors are
	now created in NTFS v3.0 format when supported by the volume.

	Workarounds for bugs in libntfs-3g version 2013.1.13 and earlier have
	been removed.  Users are advised to upgrade to a later version of
	libntfs-3g.

Version 1.9.2:
	On UNIX, wimlib can now overwrite readonly files when extracting.

	On Windows, fixed a bug where wimlib could leave a null DACL (a.k.a. "no
	NTFS permissions") set on some existing directories after extraction.

	On Windows, when applying a WIM image in "WIMBoot mode" when the WOF
	driver is not loaded, wimlib can now correctly register a new WIM file
	with the target volume when the target volume previously had had WIM
	files unregistered.

	Added a new testing program.

	Clarified the main license text and updated public domain dedications
	for certain files to be more thorough.

Version 1.9.1:
	Object IDs are now saved and restored on Windows and in NTFS-3G mode.

	Reduced memory usage when exporting large numbers of WIM images.

	Non UTF-8 locales are now detected correctly.

	Addressed compiler warnings and enabled "silent" make rules by default.

	Windows-specific updates:
		Fixed a bug where duplicate backslashes could be generated in
		link targets when extracting symbolic links and junctions.

		Fixed a bug where the .cmd shortcuts for wimlib-imagex wouldn't
		work if their full path contained a space.

		Fixed bugs related to scanning SMB filesystems.

		Added warning message about known issue with WindowsApps folder.

		Added instructions for building from source on Windows.

		VSS support is no longer marked "experimental".

		Added missing license file for libdivsufsort-lite.

Version 1.9.0:
	Added experimental support for Windows VSS (Volume Shadow Copy Service).
	The new '--snapshot' argument to 'wimcapture' makes wimlib automatically